WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103845
REGRESSION(
r134376
): ASSERT(!m_mainBackingStore) hits in CoordinatedGraphicsLayer::syncImageBacking().
https://bugs.webkit.org/show_bug.cgi?id=103845
Summary
REGRESSION(r134376): ASSERT(!m_mainBackingStore) hits in CoordinatedGraphicsL...
Dongseong Hwang
Reported
2012-12-02 15:43:52 PST
When loading
http://www.webkit.org/blog-files/leaves/index.html
, we can encounter following crash on Qt WK2. ASSERTION FAILED: !m_mainBackingStore /media/WDDisk/workspace/WebKit/WebKit/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp(489) : void WebCore::CoordinatedGraphicsLayer::syncImageBacking() 1 0x7ffff751c6ae /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore24CoordinatedGraphicsLayer16syncImageBackingEv+0x8e) [0x7ffff751c6ae] 2 0x7ffff751ce06 /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore24CoordinatedGraphicsLayer37flushCompositingStateForThisLayerOnlyEv+0x18) [0x7ffff751ce06] 3 0x7ffff751c42c /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore24CoordinatedGraphicsLayer21flushCompositingStateERKNS_9FloatRectE+0xbe) [0x7ffff751c42c] 4 0x7ffff751c46d /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore24CoordinatedGraphicsLayer21flushCompositingStateERKNS_9FloatRectE+0xff) [0x7ffff751c46d] 5 0x7ffff751c46d /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore24CoordinatedGraphicsLayer21flushCompositingStateERKNS_9FloatRectE+0xff) [0x7ffff751c46d] 6 0x7ffff751c46d /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore24CoordinatedGraphicsLayer21flushCompositingStateERKNS_9FloatRectE+0xff) [0x7ffff751c46d] 7 0x7ffff2f7bf6c /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/../lib/libWebCore.so.1(_ZN7WebCore21RenderLayerCompositor24flushPendingLayerChangesEb+0x23e) [0x7ffff2f7bf6c] 8 0x7ffff2caa8cb /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/../lib/libWebCore.so.1(_ZN7WebCore9FrameView33flushCompositingStateForThisFrameEPNS_5FrameE+0xe3) [0x7ffff2caa8cb] 9 0x7ffff2caac05 /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/../lib/libWebCore.so.1(_ZN7WebCore9FrameView39flushCompositingStateIncludingSubframesEv+0x31) [0x7ffff2caac05] 10 0x7ffff7525b96 /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN6WebKit20LayerTreeCoordinator24flushPendingLayerChangesEv+0x13a) [0x7ffff7525b96] 11 0x7ffff75268aa /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN6WebKit20LayerTreeCoordinator26performScheduledLayerFlushEv+0xc2) [0x7ffff75268aa] 12 0x7ffff75269a2 /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN6WebKit20LayerTreeCoordinator20layerFlushTimerFiredEPN7WebCore5TimerIS0_EE+0x1c) [0x7ffff75269a2] 13 0x7ffff7532644 /media/WDDisk/workspace/WebKit/WebKit/WebKitBuild/qt5/Debug/lib/libWebKit2.so.1(_ZN7WebCore5TimerIN6WebKit20LayerTreeCoordinatorEE5firedEv+0x6c) [0x7ffff7532644]
Attachments
Patch
(4.31 KB, patch)
2012-12-02 16:07 PST
,
Dongseong Hwang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dongseong Hwang
Comment 1
2012-12-02 16:07:18 PST
Created
attachment 177159
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-02 16:46:03 PST
Comment on
attachment 177159
[details]
Patch Clearing flags on attachment: 177159 Committed
r136355
: <
http://trac.webkit.org/changeset/136355
>
WebKit Review Bot
Comment 3
2012-12-02 16:46:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug