REGRESSION(r134376): ASSERT(!m_mainBackingStore) hits in CoordinatedGraphicsLayer::syncImageBacking(). https://bugs.webkit.org/show_bug.cgi?id=103845

Patch by Huang Dongsung <luxtella@company100.net> on 2012-12-02
Reviewed by Noam Rosenthal.

flushCompositingStateForThisLayerOnly() calls syncImageBacking() before calling
updateContentBuffers(). It means there can be the moment that
CoordinatedGraphicsLayer has m_mainBackingStore although
shouldHaveBackingStore() return false.
This patch changes syncImageBacking() to check shouldHaveBackingStore() instead
of m_mainBackingStore.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::syncImageBacking):
(WebCore::CoordinatedGraphicsLayer::adjustContentsScale):
(WebCore::CoordinatedGraphicsLayer::updateContentBuffers):
(WebCore::CoordinatedGraphicsLayer::shouldHaveBackingStore):
(WebCore):
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.h:
(CoordinatedGraphicsLayer):

git-svn-id: svn://svn.chromium.org/blink/trunk@136355 bbb929c8-8fbe-4397-9dbb-9b2b20218538