third_party/WebKit/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp
@@ -487,7 +487,7 @@ void CoordinatedGraphicsLayer::syncImageBacking()
     m_shouldSyncImageBacking = false;
 
     if (m_compositedNativeImagePtr) {
-        ASSERT(!m_mainBackingStore);
+        ASSERT(!shouldHaveBackingStore());
         ASSERT(m_compositedImage);
 
         bool imageInstanceReplaced = m_coordinatedImageBacking && (m_coordinatedImageBacking->id() != CoordinatedImageBacking::getCoordinatedImageBackingID(m_compositedImage.get()));
@@ -641,7 +641,7 @@ float CoordinatedGraphicsLayer::effectiveContentsScale()
 
 void CoordinatedGraphicsLayer::adjustContentsScale()
 {
-    if (!drawsContent() || !contentsAreVisible() || m_size.isEmpty())
+    if (!shouldHaveBackingStore())
         return;
 
     if (!m_mainBackingStore || m_mainBackingStore->contentsScale() == effectiveContentsScale())
@@ -748,7 +748,7 @@ void CoordinatedGraphicsLayer::removeTile(int tileID)
 
 void CoordinatedGraphicsLayer::updateContentBuffers()
 {
-    if (!drawsContent() || !contentsAreVisible() || m_size.isEmpty()) {
+    if (!shouldHaveBackingStore()) {
         m_mainBackingStore.clear();
         m_previousBackingStore.clear();
         return;
@@ -839,6 +839,11 @@ static PassOwnPtr<GraphicsLayer> createCoordinatedGraphicsLayer(GraphicsLayerCli
 void CoordinatedGraphicsLayer::initFactory()
 {
     GraphicsLayer::setGraphicsLayerFactory(createCoordinatedGraphicsLayer);
+}
+
+bool CoordinatedGraphicsLayer::shouldHaveBackingStore() const
+{
+    return drawsContent() && contentsAreVisible() && !m_size.isEmpty();
 }
 
 bool CoordinatedGraphicsLayer::selfOrAncestorHasActiveTransformAnimation() const
