third_party/WebKit/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.h
@@ -196,6 +196,7 @@ private:
     void destroyCanvasIfNeeded();
     void createCanvasIfNeeded();
 
+    bool shouldHaveBackingStore() const;
     bool selfOrAncestorHasActiveTransformAnimation() const;
     bool selfOrAncestorHaveNonAffineTransforms();
     void adjustContentsScale();
